# wasm-dictionary-compression-zstd-spin

./: .gitignore  Makefile  readme.md  spin.toml
.wit/components/rustapi/: deps.wit
api/: knitwit.json  package-lock.json  package.json
api/config/: knitwit.json
api/src/: compression.ts  index.ts
compressor/: Cargo.toml
compressor/src/: bindings.rs  lib.rs  zstd_compressor.rs
compressor/wit/: world.wit
dictionaries/: v1.dict
rustapi/: Cargo.toml
rustapi/src/: lib.rs
rustapi/src/bindings/: deps.rs
