[package]
name = "rustapi"
authors = ["Radu Matei <radu@fermyon.com>"]
description = ""
version = "0.1.0"
rust-version = "1.78"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
futures = "0.3.31"
spin-sdk = "3.1.0"
wit-bindgen = "0.16.0"
serde = { version = "1.0.217", features = ["derive"] }
spin-executor = "3.1.0"

[workspace]
